--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
-</head> 
+</head>
+:
 
 <body>
     <h1>Welcome to Our Restaurant</h1>
     <p>Explore our delicious menu and make a reservation today!</p>
 </body>
-</html> 
-<form method="POST" action="/home">
+</html>
+<form method="POST" action="/">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
     <br>
